fixing stretching #2

--- a/styles.css
+++ b/styles.css
@@ -1647,7 +1647,7 @@ textarea {
 
 
 .casebody img{
-	max-width: 100%;
+	max-width: 100vw;
 	margin-top: 30px;
 	height: auto;
 }
